# open-finance-br-cli

./: .gitignore  README.md  pyproject.toml  setup.py
openfinance/: __init__.py  auth.py  cli.py  client.py  config.py
tests/: test_cli.py
