[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "open-finance-br-cli"
version = "0.1.0"
description = "CLI Python para consumir APIs padronizadas do Open Finance Brasil."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Wesley Simplicio"}
]
keywords = ["open-finance", "open-banking", "brasil", "cli", "oauth2"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
openfinance = "openfinance.cli:main"

[tool.setuptools]
packages = ["openfinance"]
